updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,24 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Mechanical Engineer graduate from the University of Houston. I have worked in the Oil and Gas industry
+        for about 7 years, currently employed at Oceaneering.
+      </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Katy, Texas, and have lived in Texas all my life.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My hobbies include shooting pool, watching the stock market, playing video games, and spending time with friends.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I am still looking for my dream job, but I have hopes that this bootcamp will push me in the direction
+        to working in a job that I will enjoy!
+      </p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently live in the Cypress area on the west side of Houston.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I have dabbled in web development using Udemy courses, which piqued my interest. I also really enjoy coding in many
+        many fashions. Being able to make changes and seeing results almost instantaneously gives me joy. Plus the
+        industry is ever-growing.
+      </p>
     </section>
 
     <footer id="footer">
